[gd_scene load_steps=16 format=3 uid="uid://b3mf65fcnvmvu"]

[ext_resource type="Script" uid="uid://crf18oy3oc75j" path="res://scenes/characters/player.gd" id="1_cvyhv"]
[ext_resource type="Texture2D" uid="uid://brk1vhy0k5ah2" path="res://assets/sprites/player.svg" id="2_atpat"]
[ext_resource type="Script" uid="uid://b0adtik6828d2" path="res://scenes/characters/pickups_checker_component.gd" id="4_kqtwu"]
[ext_resource type="PackedScene" uid="uid://22o5hm5rorw8" path="res://scenes/components/hitbox_component.tscn" id="4_pwyjt"]
[ext_resource type="Theme" uid="uid://ducfept6pmkkm" path="res://resources/theme/theme-main.tres" id="6_8qvmc"]
[ext_resource type="PackedScene" uid="uid://gxc4hcrljhcm" path="res://scenes/components/health_component.tscn" id="6_bedk8"]
[ext_resource type="Script" uid="uid://bvb2hxpdk5tde" path="res://scenes/components/player_input_component.gd" id="7_6eyoc"]
[ext_resource type="Script" uid="uid://bh62la2plrk8u" path="res://scenes/components/velocity_component.gd" id="8_eojnx"]
[ext_resource type="AnimationLibrary" uid="uid://cvxhas1qg2ntb" path="res://scenes/characters/player_anims.tres" id="9_2l4js"]
[ext_resource type="Script" uid="uid://cph1hb68v0xjn" path="res://scenes/components/animation_component.gd" id="10_2l4js"]
[ext_resource type="Script" uid="uid://dcm4p61vcyfim" path="res://scenes/weapons-related/inventory_component.gd" id="10_7vyk4"]
[ext_resource type="Shader" uid="uid://dkg0rxg12mlmn" path="res://scenes/characters/simple_polish_adder.gdshader" id="10_jk2m4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8iqyn"]
radius = 38.0132

[sub_resource type="CircleShape2D" id="CircleShape2D_d6keb"]
radius = 38.0132

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xhtjm"]
shader = ExtResource("10_jk2m4")
shader_parameter/enable_shadow = true
shader_parameter/shadow_offset = Vector2(-2.13, 3)
shader_parameter/shadow_color = Color(0, 0, 0, 0.3)
shader_parameter/shadow_blur = 2.0
shader_parameter/enable_outline = true
shader_parameter/outline_width = 1.5
shader_parameter/outline_color = Color(0.1, 0.1, 0.1, 1)
shader_parameter/enable_inner_glow = true
shader_parameter/inner_glow_width = 3.0
shader_parameter/inner_glow_color = Color(1, 1, 1, 0.15)
shader_parameter/enable_gradient = true
shader_parameter/gradient_top = Color(1, 1, 1, 0.1)
shader_parameter/gradient_bottom = Color(0, 0, 0, 0.2)
shader_parameter/enable_texture = true
shader_parameter/texture_scale = 1.0
shader_parameter/texture_strength = 0.05
shader_parameter/saturation = 1.1
shader_parameter/brightness = 0.05
shader_parameter/contrast = 1.1
shader_parameter/smoothing = 0.5

[node name="Player" type="CharacterBody2D" groups=["Player"]]
position = Vector2(0, -40)
collision_layer = 9
collision_mask = 9
motion_mode = 1
platform_on_leave = 2
platform_floor_layers = 4294967292
script = ExtResource("1_cvyhv")

[node name="HealthComponent" parent="." instance=ExtResource("6_bedk8")]
unique_name_in_owner = true

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("8_eojnx")
metadata/_custom_type_script = "uid://bh62la2plrk8u"

[node name="PlayerInputComponent" type="Node" parent="."]
script = ExtResource("7_6eyoc")
metadata/_custom_type_script = "uid://bvb2hxpdk5tde"

[node name="AnimationComponent" type="Node" parent="." node_paths=PackedStringArray("anim_player", "sprite")]
script = ExtResource("10_2l4js")
anims_prefix = ""
anim_player = NodePath("../AnimationPlayer")
sprite = NodePath("../Sprite2D")
metadata/_custom_type_script = "uid://cph1hb68v0xjn"

[node name="InventoryComponent" type="Node" parent="."]
script = ExtResource("10_7vyk4")
metadata/_custom_type_script = "uid://dcm4p61vcyfim"

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_pwyjt")]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 12
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(-2, -20)
shape = SubResource("CircleShape2D_8iqyn")

[node name="PickupsCheckerComponent" type="Node2D" parent="HitboxComponent"]
script = ExtResource("4_kqtwu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, -15)
shape = SubResource("CircleShape2D_d6keb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": ExtResource("9_2l4js")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_xhtjm")
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_atpat")
flip_h = true

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -38.0
offset_top = 42.0
offset_right = 42.0
offset_bottom = 60.0
theme = ExtResource("6_8qvmc")
show_percentage = false
metadata/_edit_use_anchors_ = true

[connection signal="area_entered" from="HitboxComponent" to="HitboxComponent/PickupsCheckerComponent" method="_on_hitbox_component_area_entered"]
